--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/testBuilds.loader.js";
+      var loaderUrl = buildUrl + "/young-old.loader.js";
       var config = {
-        dataUrl: buildUrl + "/testBuilds.data.gz",
-        frameworkUrl: buildUrl + "/testBuilds.framework.js.gz",
-        codeUrl: buildUrl + "/testBuilds.wasm.gz",
+        dataUrl: buildUrl + "/young-old.data.gz",
+        frameworkUrl: buildUrl + "/young-old.framework.js.gz",
+        codeUrl: buildUrl + "/young-old.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "young-old-transition",
