--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/young-old.loader.js";
       var config = {
-        dataUrl: buildUrl + "/young-old.data.gz",
-        frameworkUrl: buildUrl + "/young-old.framework.js.gz",
-        codeUrl: buildUrl + "/young-old.wasm.gz",
+        dataUrl: buildUrl + "/young-old.data",
+        frameworkUrl: buildUrl + "/young-old.framework.js",
+        codeUrl: buildUrl + "/young-old.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "young-old-transition",
