--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
       };
       document.body.appendChild(script);
     </script>
-  <input type="image">input</input>
+  <input type="file">input</input>
   </body>
 </html>
