--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
       };
       document.body.appendChild(script);
     </script>
+    <style>
+      input {
+        display: block;
+        visibility: hidden;
+        width: 0;
+        height: 0;
+      }
+    </style>
     <input type="file" name="somename" size="chars">
     <button>Choose File</button>
     <script>
