--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <input type="file" name="somename" size="chars">
     <button>Choose File</button>
     <script>
-      $('button').click(function(){
-        $('input').click();
+      ('button').click(function(){
+        ('input').click();
       });
       </script>
   </body>
