--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <input id="TestInput" type="file" name="somename" size="chars">
     <button id="testBtn">Choose File</button>
     <script>
-      GetElementById("testBtn").click(function(){
-        GetElementById("TestInput").click();
+      document.getElementById("testBtn").click(function(){
+        document.getElementById("TestInput").click();
       });
       </script>
   </body>
