--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <input id="TestInput" type="file" name="somename" size="chars">
     <button id="testBtn">Choose File</button>
     <script>
-      document.getElementById("testBtn").click(function(){
+      document.getElementById("testBtn").onclick(function(){
         document.getElementById("TestInput").click();
       });
       </script>
